13095 ZFS ARC minimum size is too large Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Reviewed by: Andy Fiddaman <illumos@fiddaman.net> Approved by: Patrick Mooney <pmooney@pfmooney.com>