usr/src/uts/common/fs/zfs/arc.c
@@ -7116,8 +7116,18 @@ arc_init(void)
 	mutex_init(&arc_adjust_lock, NULL, MUTEX_DEFAULT, NULL);
 	cv_init(&arc_adjust_waiters_cv, NULL, CV_DEFAULT, NULL);
 
-	/* set min cache to 1/32 of all memory, or 64MB, whichever is more */
-	arc_c_min = MAX(allmem / 32, 64 << 20);
+	/*
+	 * Set the minimum cache size to 1/64 of all memory, with a hard
+	 * minimum of 64MB.
+	 */
+	arc_c_min = MAX(allmem / 64, 64 << 20);
+	/*
+	 * In a system with a lot of physical memory this will still result in
+	 * an ARC size floor that is quite large in absolute terms.  Cap the
+	 * growth of the value at 2GB.
+	 */
+	arc_c_min = MIN(arc_c_min, 2 << 30);
+
 	/* set max to 3/4 of all memory, or all but 1GB, whichever is more */
 	if (allmem >= 1 << 30)
 		arc_c_max = allmem - (1 << 30);
@@ -7164,9 +7174,6 @@ arc_init(void)
 	/* Allow the tunable to override if it is reasonable */
 	if (zfs_arc_meta_limit > 0 && zfs_arc_meta_limit <= arc_c_max)
 		arc_meta_limit = zfs_arc_meta_limit;
-
-	if (arc_c_min < arc_meta_limit / 2 && zfs_arc_min == 0)
-		arc_c_min = arc_meta_limit / 2;
 
 	if (zfs_arc_meta_min > 0) {
 		arc_meta_min = zfs_arc_meta_min;
